--- a/pages/index.html
+++ b/pages/index.html
@@ -30,13 +30,13 @@
 
     <div class="breakfast-section">
         <div class="breakfast-content">
-            <h2>Breakfast To-Go</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in nisi dolor.</p>
+            <h2>Welcome to Feast Vision!</h2>
+            <p>We’re passionate about bringing wholesome and delicious recipes to your table. Our team believes that cooking should be fun, creative, and tailored to your unique tastes. Whether you're an experienced chef or a kitchen novice, our goal is to inspire you with exciting recipes.</p><br>
+            <p>We offer:</p>
             <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                <li>Praesent in nisi dolor.</li>
-                <li>Aenean convallis neque non tortor pulvinar lobortis.</li>
-                <li>In hac habitasse platea dictumst.</li>
+                <li>Recipe search</li>
+                <li>Portion adjustment</li>
+                <li>Diet and cuisine filtering</li>
             </ul>
             <a href="recipes.html">SEE OUR RECIPES</a>
         </div>
@@ -47,8 +47,8 @@
 
     <div class="card-section">
         <div class="card">
-            <img src="../images/fatayas.jpg" alt="Breakfast-in-a-Jar">
-            <h3>Breakfast-in-a-Jar</h3>
+            <img src="../images/fatayas.jpg" alt="Appetizers">
+            <h3>Appetizers</h3>
         </div>
         <div class="card">
             <img src="../images/senegalese.jpeg" alt="Hearty Meals">
