--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -20,7 +20,7 @@
     </div>
 </header>
 
-<div class="filter-section center">
+<div class="filter-section">
     <div class="input-field" id="filter">
         <i class="material-icons prefix">search</i>
         <input type="text" id="search" placeholder="Search for recipes...">
