--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feast Vision</title>
+    <title>About Us</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
 </head>
 <body>
 
@@ -21,11 +21,32 @@
 
 </header>
 
-<footer class="page-footer" style="background-color: #243424;">
+<div class="content">
+    <div style="display: flex; margin-top: 10%">
+        <div>
+            <img src="../images/tatin.jpg" alt=""  style="width:100%">
+        </div>
+        <div style="margin: 0 10%;">
+            <h4>About Us</h4>
+            <p>
+                Welcome to Feast Vision! We’re passionate about bringing wholesome and delicious recipes to your table.
+                Our team believes that cooking should be fun, creative, and tailored to your unique tastes.
+                Whether you're an experienced chef or a kitchen novice, our goal is to inspire you with exciting recipes.
+            </p>
+            <p>
+                We pride ourselves on simplicity and accessibility—every recipe is designed to use common ingredients while offering incredible results.
+                Join our community and explore the joys of cooking with us!
+            </p>
+        </div>
+    </div>
+
+
+</div>
+<footer class="page-footer" style="background-color: #243424; bottom: 0;">
     <p class="center">Feast Vision 2024 &copy All rights reserved</p>
 </footer>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
 </body>
+
 </html>
