--- a/pages/recipe-details.html
+++ b/pages/recipe-details.html
@@ -5,43 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recipe Details - Feast Vision</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f5f5f5;
-    }
-    .recipe-header {
-      text-align: center;
-      margin: 20px 0;
-    }
-    .ingredients-list, .steps-list {
-      margin: 20px auto;
-      max-width: 600px;
-    }
-    .cooking-mode {
-      display: none;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="../styles/recipes.css">
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="teal">
-  <div class="nav-wrapper container">
-    <a href="#" class="brand-logo">Feast Vision</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="recipes.html">Recipes</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+<header class="valign-wrapper">
+  <div class="logo left">Feast Vision</div>
+  <div class="menu right">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="recipes.html">Recipes</a>
+    <a href="contact.html">Contact us</a>
   </div>
-</nav>
+</header>
 
-<!-- Recipe Header -->
 <div class="recipe-header">
-  <h2 id="recipe-title">Spaghetti Bolognese</h2>
-  <p id="recipe-description">A classic Italian dish that's simple and satisfying.</p>
+  <h2 id="recipe-title">Tiramisu</h2>
+  <p id="recipe-description">A classic Italian dessert with layers of coffee-soaked ladyfingers and creamy mascarpone filling.</p>
   <div class="input-field">
     <input type="number" id="portion-input" min="1" value="4" style="width: 100px; text-align: center;">
     <label for="portion-input">Servings</label>
@@ -75,112 +55,14 @@
   <button class="btn teal" id="next-step">Next</button>
 </div>
 
+<footer class="page-footer" style="background-color: #243424;">
+  <p class="center">Feast Vision 2024 &copy All rights reserved</p>
+</footer>
+
 <!-- Materialize JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    // Recipe data
-    const recipe = {
-      title: 'Spaghetti Bolognese',
-      description: 'A classic Italian dish that\'s simple and satisfying.',
-      ingredients: [
-        { name: 'Spaghetti', quantity: 400, unit: 'g' },
-        { name: 'Ground beef', quantity: 500, unit: 'g' },
-        { name: 'Tomato sauce', quantity: 1, unit: 'cup' },
-        { name: 'Onion', quantity: 1, unit: '' },
-        { name: 'Garlic', quantity: 2, unit: 'cloves' },
-        { name: 'Olive oil', quantity: 2, unit: 'tbsp' },
-        { name: 'Salt', quantity: 1, unit: 'tsp' },
-        { name: 'Pepper', quantity: 0.5, unit: 'tsp' }
-      ],
-      steps: [
-        'Boil the spaghetti according to package instructions.',
-        'Heat olive oil in a pan and sauté diced onion and garlic until translucent.',
-        'Add ground beef to the pan and cook until browned.',
-        'Pour in the tomato sauce and simmer for 15 minutes.',
-        'Season with salt and pepper to taste.',
-        'Serve the sauce over spaghetti and enjoy!'
-      ]
-    };
+<script src="../js/details.js">
 
-    // Elements
-    const recipeTitle = document.getElementById('recipe-title');
-    const recipeDescription = document.getElementById('recipe-description');
-    const ingredientsList = document.getElementById('ingredients-list');
-    const stepsList = document.getElementById('steps-list');
-    const portionInput = document.getElementById('portion-input');
-    const cookingMode = document.getElementById('cooking-mode');
-    const toggleCookingMode = document.getElementById('toggle-cooking-mode');
-    const currentStepCard = document.getElementById('current-step');
-    const prevStepButton = document.getElementById('prev-step');
-    const nextStepButton = document.getElementById('next-step');
-
-    // Populate recipe details
-    recipeTitle.textContent = recipe.title;
-    recipeDescription.textContent = recipe.description;
-
-    function renderIngredients(servings) {
-      ingredientsList.innerHTML = '';
-      recipe.ingredients.forEach(ingredient => {
-        const quantity = (ingredient.quantity / 4) * servings;
-        const ingredientHTML = `
-                        <li class="collection-item">
-                            ${quantity.toFixed(2)} ${ingredient.unit} ${ingredient.name}
-                        </li>
-                    `;
-        ingredientsList.insertAdjacentHTML('beforeend', ingredientHTML);
-      });
-    }
-
-    function renderSteps() {
-      stepsList.innerHTML = '';
-      recipe.steps.forEach((step, index) => {
-        const stepHTML = `<li>${step}</li>`;
-        stepsList.insertAdjacentHTML('beforeend', stepHTML);
-      });
-    }
-
-    // Handle portion adjustment
-    portionInput.addEventListener('input', () => {
-      const servings = parseInt(portionInput.value, 10);
-      if (!isNaN(servings) && servings > 0) {
-        renderIngredients(servings);
-      }
-    });
-
-    // Cooking Mode Logic
-    let currentStepIndex = 0;
-
-    function updateCookingStep() {
-      currentStepCard.textContent = recipe.steps[currentStepIndex];
-      prevStepButton.disabled = currentStepIndex === 0;
-      nextStepButton.disabled = currentStepIndex === recipe.steps.length - 1;
-    }
-
-    toggleCookingMode.addEventListener('click', () => {
-      cookingMode.style.display = cookingMode.style.display === 'block' ? 'none' : 'block';
-      currentStepIndex = 0;
-      updateCookingStep();
-    });
-
-    prevStepButton.addEventListener('click', () => {
-      if (currentStepIndex > 0) {
-        currentStepIndex--;
-        updateCookingStep();
-      }
-    });
-
-    nextStepButton.addEventListener('click', () => {
-      if (currentStepIndex < recipe.steps.length - 1) {
-        currentStepIndex++;
-        updateCookingStep();
-      }
-    });
-
-    // Initial render
-    renderIngredients(4);
-    renderSteps();
-  });
 </script>
 </body>
 </html>
